# hongdo_ros_web

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  package.xml
scripts/: QR_make.html  drawn.html  game.html  game_intro.html  index.html  intro.html  loading.html  nam.js  select_pic.html  taking_pic.html  talker.js  upload.html
scripts/public/: QR_make.js  drawn.js  finish.js  game.js  game_intro.js  index.js  intro.js  loading.js  select_effect.js  select_pic.js  taking_pic.js  upload.js
scripts/public/css/: drawn_style.css  drawn_style.css.map  finish_style.css  finish_style.css.map  game_intro_style.css  game_intro_style.css.map  game_style.css  game_style.css.map  index_style.css  index_style.css.map  intro_style.css  loading_style.css  loading_style.css.map  select_pic_style.css  select_pic_style.css.map  upload_style.css  upload_style.css.map
scripts/public/hongdo_AI/cartoon_AI/: cartoon.py
scripts/public/hongdo_AI/pencil_AI/: Resize.py  longAI.py  startAI.sh
scripts/public/hongdo_AI/simple_AI/: .gitattributes  colab_requirements.txt  vision copy.py  vision.py
scripts/public/img/uploads/: .gitattributes  vision.py
scripts/public/scss/: _reset.scss  drawn_style.scss  finish_style.scss  game_intro_style.scss  game_style.scss  index_style.scss  loading_style.scss  select_pic_style.scss  upload_style.scss
